[package]
name = "stellar vanity"
version = "0.1.0"
authors = ["Rob Durst <rsdurst@colby.edu>"]
description = "A simple CLI for generating Stellar vanity addresses"
readme = "README.md"
keywords = ["stellar", "vanity", "address"]
categories = ["blockchain", "cli", "tool"]
repository = "https://github.com/robertDurst/stellar-vanity-address-generator"

[dependencies]
rand = "0.4"
sha2 = "0.7.0"
ed25519-dalek = "0.6.1"
base32 = "0.3.1"
crc16 = "0.3.4"
bytes = "0.4.6"
byteorder = "1.2.1"
clap = "2.26.0"
