[package]
name = "stellar_vanity"
version = "0.7.0"
authors = ["Rob Durst <rsdurst@colby.edu>"]
description = "A simple CLI for generating Stellar vanity addresses"
readme = "README.md"
keywords = ["stellar", "vanity", "address"]
categories = ["blockchain", "cli", "tool"]
repository = "https://github.com/robertDurst/stellar-vanity-address-generator"
license-file = "LICENSE"

[dependencies]
rand = "0.7.3"
rand_core = "0.5.1"
ed25519-dalek = "1.0.0-pre.1"
base32 = "0.4.0"
crc16 = "0.4.0"
bytes = "0.5.4"
byteorder = "1.2.1"
clap = "2.26.0"

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.0"

[[bench]]
name = "benchmark"
harness = false