[package]
name = "stellar_vanity"
version = "0.8.0"
authors = ["Rob Durst <rsdurst@colby.edu>"]
description = "A simple CLI for generating Stellar vanity addresses"
readme = "README.md"
keywords = ["stellar", "vanity", "address"]
categories = ["blockchain", "cli", "tool"]
repository = "https://github.com/robertDurst/stellar-vanity-address-generator"
license-file = "LICENSE"

[dependencies]
rand = "0.7.3"
rand_core = "0.5.1"
ed25519-dalek = "1.0"
base32 = "0.4"
crc16 = "0.4"
bytes = "1.1"
byteorder = "1.4"
clap = "2.33"
regex = "1"
fstrings = "0.2"

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.0"

[[bench]]
name = "benchmark"
harness = false
